# spark101

./: .dockerignore  DOCKER_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.py  test_spark_setup.py
.devcontainer/: devcontainer.json
conf/: README.md  log4j.properties  spark-defaults.conf
datasets/: employees_large.csv  sales_data.json  sample_data.csv  server_logs.txt
docker/: grafana-datasources.yml  init-db.sql  jupyter_notebook_config.py  prometheus.yml  start-notebook.sh
examples/chapter01/: README.md  hello_spark.py
examples/chapter02/: README.md  rdd_basics.py
examples/chapter03/: README.md  data_io_operations.py  dataframe_basics.py  schema_operations.py
examples/chapter04/: README.md  advanced_sql_functions.py  spark_sql_basics.py
examples/chapter05/: README.md  kafka_streaming.py  streaming_basics.py
examples/chapter06/: README.md  mllib_basics.py
examples/chapter07/: README.md  performance_tuning.py
examples/chapter08/: README.md  log_analyzer.py  realtime_etl.py
exercises/chapter01/: README.md  exercise_01_basic_spark.py  exercise_02_dataframe_operations.py  exercise_03_data_cleaning.py  exercise_04_comprehensive_analysis.py
notebooks/: 01_spark_basics.ipynb  02_rdd_operations.ipynb  03_dataframe_operations.ipynb  04_spark_sql.ipynb  05_streaming.ipynb  06_mllib.ipynb  07_performance_tuning.ipynb  08_projects.ipynb
scripts/: bootstrap.py  setup_java_env.sh
tests/: conftest.py  test_chapter01.py  test_chapter02.py  test_chapter03.py  test_chapter04.py  test_chapter05.py  test_chapter06.py  test_chapter07.py  test_chapter08.py  test_dataframe_operations.py  test_projects.py
(+42 files in other folders)
