[tool.poetry]
name = "spark101"
version = "0.1.0"
description = "從零開始學習 Apache Spark 的完整教學資源"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "spark101"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.5.0"
jupyter = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
plotly = "^5.0.0"
requests = "^2.28.0"
scikit-learn = "^1.1.0"
kafka-python = "^2.0.2"
streamlit = "^1.22.0"
findspark = "^2.0.1"
pyarrow = "^12.0.0"
delta-spark = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-spark = "^0.6.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.0.0"
pre-commit = "^3.0.0"
jupyterlab = "^4.0.0"
nbconvert = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true