[tool.poetry]
name = "spark101"
version = "0.1.0"
description = "從零開始學習 Apache Spark 的完整教學資源"
authors = ["JohnTung <myps6415@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.4.1"
pandas = "^1.5.0"
numpy = "^1.24.0"
findspark = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"
safety = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"